[package]
name = "flussonic-publishing-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.9.0"
dotenv = "0.15.0"
mongodb = "2.8.2"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.198"
lazy_static = "1.4.0"
base64 = "0.21.7"


[production]
address = "0.0.0.0"